--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/4Pets
 spring.datasource.username=root
-spring.datasource.password=RootJesus71@@@
+spring.datasource.password=ertxcs135
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
+
