b save fi l database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/4Pets
+spring.datasource.url=jdbc:mysql://localhost:3306/usersdp
 spring.datasource.username=root
-spring.datasource.password=ertxcs135
+spring.datasource.password=f2g7g6v7
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
-
