email verification na2s tka isa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,11 @@ spring.datasource.username=root
 spring.datasource.password=f2g7g6v7
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
+# Mail
+spring.mail.username=ehabmarina902@gmail.com
+spring.mail.password=f2g7g6v7
+spring.mail.port=587
+spring.mail.host = smtp.gmail.com
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.auth = true
